# Final-Project

./: CMakeLists.txt  readme.md
cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake-build/.cmake/api/v1/reply/: cache-v2-0b052278abb846b8d60b.json  codemodel-v2-81ce9edee2564fc6ad15.json  index-2022-05-17T11-35-50-0702.json  (+1 more)
include/Engine/: AssetManager.hpp  BoxCollider.hpp  C_Animation.hpp  C_Sprite.hpp  Component.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  Game.hpp  Input.hpp  PhysicSystem.hpp  RigidBody.hpp  SharedContext.hpp  State.hpp  StateMachine.hpp  Transform.hpp
include/GameOverState/: GameOverState.hpp
include/GameState/: Background.hpp  Chest.hpp  GameHUD.hpp  GameState.hpp  Level.hpp  Mushroom.hpp  Pickup.hpp  Player.hpp  PlayerMovement.hpp  Terrain.hpp  TilemapParser.hpp
include/MenuState/: ChoseCharacterState.hpp  ChoseLevelState.hpp  MenuState.hpp  TutorialState.hpp
include/Utility/: Animation.hpp  Bitmask.hpp  Button.hpp  Sprite.hpp  SpriteSheet.hpp
make-build/: Makefile
res/: settings.json
res/Tilemap/: level1.json  level2.json
src/: main.cpp
src/Engine/: AssetManager.cpp  BoxCollider.cpp  C_Animation.cpp  C_Sprite.cpp  Game.cpp  Input.cpp  PhysicSystem.cpp  RigidBody.cpp  StateMachine.cpp  Transform.cpp
src/GameOverState/: GameOverState.cpp
src/GameState/: Background.cpp  Chest.cpp  GameHUD.cpp  GameState.cpp  Level.cpp  Mushroom.cpp  Pickup.cpp  Player.cpp  PlayerMovement.cpp  Terrain.cpp  TileMapParser.cpp
src/MenuState/: ChoseCharacterState.cpp  ChoseLevelState.cpp  MenuState.cpp  TutorialState.cpp
src/Utility/: Animation.cpp  Bitmask.cpp  Button.cpp  Sprite.cpp  SpriteSheet.cpp
